--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @appearance do |f| %>
-  <%= f.label "Select a guest:", :guest_id %>
+  <%= f.label :guest_id %>
+  <%= f.text_field :guest_id %>
+  <br /><br />
+  <%= f.label :episode_id %>
+  <%= f.text_field :episode_id %>
+  <br /><br />
+  <%= f.label :rating %>
+  <%= f.text_field :rating %>
+  <br /><br />
+  <%= f.submit %>
 <% end %>
